--- a/Examen Práctico 1 Trimestre Palomo Pino Alberto/estilo.css
+++ b/Examen Práctico 1 Trimestre Palomo Pino Alberto/estilo.css
@@ -17,7 +17,7 @@ div {
     width: 100%;
     height: 100%;
     opacity: 0%;
-    margin-left: 30vw;
+    margin-left: 29vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -50,7 +50,7 @@ img:focus {
 }
 
 p {
-    font-size: 4vw;
+    font-size: 2vw;
     background-color: transparent;
     text-align: center;
 }
@@ -76,11 +76,14 @@ animation: flick 2s infinite backwards;
     }
 }
 
-img,div {
+
+@media screen and (orientation:landscape) {
+   img,div {
     width: 70vh;
     margin-left: calc(50vw - 35vh);
 }
 
 p {
-    font-size: 11vh;
+    font-size: 7vw;
+} 
 }
