--- a/estilo.css
+++ b/estilo.css
@@ -17,7 +17,6 @@ div {
     width: 100%;
     height: 100%;
     opacity: 0%;
-    margin-left: 30vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -50,7 +49,7 @@ img:hover {
 }
 
 p {
-    font-size: 4vw;
+    font-size: 9vh;
     background-color: transparent;
     text-align: center;
 }
@@ -76,11 +75,10 @@ animation: flick 2s infinite backwards;
     }
 }
 
-img,div {
+
+@media screen and (orientation:landscape) {
+   img,div {
     width: 70vh;
     margin-left: calc(50vw - 35vh);
 }
-
-p {
-    font-size: 12vh;
 }
